--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 a:visited,
@@ -8,42 +9,50 @@ a {
   color: lime;
 }
 
-#root {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  width: 100vw;
+hr {
+  border: none;
+  min-height: 1rem;
 }
 
 body {
+  height: 100dvh;
+  width: 100dvw;
   background-color: black;
   color: lime;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
 }
 
 #header {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  min-height: 11vh;
+  justify-content: center;
   border-bottom: 2px dashed lime;
 }
 #header #site-title {
   display: none;
-  width: 30%;
+  width: 20%;
   align-content: center;
+  text-wrap: nowrap;
   text-align: center;
-  font-size: xx-large;
+  font-size: x-large;
 }
 #header #button-container {
   display: inherit;
   flex-direction: inherit;
-  flex: 1;
-  min-width: 50%;
-  justify-content: space-evenly;
+}
+#header #button-container button:last-of-type {
+  margin: 0;
 }
 #header #button-container button {
+  margin-right: 1rem;
+  padding: 0.25rem;
   display: flex;
-  flex: 1;
   place-content: center;
   place-items: center;
   border: none;
@@ -63,18 +72,17 @@ body {
 }
 
 #index-container {
+  padding: 0.5rem;
   display: flex;
   flex-direction: column;
-  place-content: center;
-  place-items: center;
+  justify-content: space-evenly;
   height: 100%;
   width: 100%;
   font-size: xx-large;
 }
 
 #contact-container {
-  display: flex;
-  flex-direction: row;
+  display: grid;
   place-content: center;
   place-items: center;
   height: 100%;
@@ -83,11 +91,10 @@ body {
 #contact-container .contact-button {
   margin: 1rem;
   padding: 1rem;
-  place-content: center;
-  min-width: 10%;
-  max-width: 12rem;
-  min-height: 10%;
+  width: 80%;
   border: 2px dashed lime;
+  place-content: center;
+  place-items: center;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   font-size: larger;
@@ -102,8 +109,20 @@ body {
 }
 
 @media screen and (min-width: 600px) {
+  #header {
+    justify-content: space-between;
+  }
   #header #site-title {
     display: block;
+  }
+  #header #button-container button:last-of-type {
+    margin-right: 1rem;
+  }
+  #contact-container {
+    display: flex;
+  }
+  #contact-container .contact-button {
+    height: 30%;
   }
 }
 
