--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -120,6 +120,8 @@ body {
         margin: 1rem;
         padding: 1rem;
 
+        overflow: scroll;
+
         width: 80%;
         border: 2px dashed $primary;
 
