--- a/src/css/global.css
+++ b/src/css/global.css
@@ -91,13 +91,15 @@ body {
   margin: 1rem;
   padding: 1rem;
   width: 80%;
-  border: 2px dashed lime;
   place-content: center;
   place-items: center;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   font-size: larger;
   font-weight: bolder;
+  background-color: transparent;
+  color: lime;
+  border: 2px dashed lime;
   transition: 0.5s;
 }
 #contact-container .contact-button:hover {
