--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -121,16 +121,19 @@ body {
         padding: 1rem;
 
         width: 80%;
-        border: 2px dashed $primary;
 
         place-content: center;
         place-items: center ;
-
 
         text-align: center;
         font-family: Arial, Helvetica, sans-serif;
         font-size: larger;
         font-weight: bolder;
+
+        background-color: transparent;
+        color: $primary;
+        border: 2px dashed $primary;
+
 
         transition: 0.5s;
     }
